# lerobot_3d

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: extrinsic_calibration.json  teleop_config.yaml
src/lerobot_3d/: icp.py
src/lerobot_3d/common/: types.py
src/lerobot_3d/control/: teleop.py
src/lerobot_3d/point_clouds/: alignment_viewer.py  camera_stream.py  point_cloud_viewer.py  pointcloud_orbbec.py  system_vis.py
src/lerobot_playground/: __init__.py  hardware_config.py  icp.py  paths.py  postprocess.py  sam_fused_pcd.py  teleop_config.py
src/lerobot_playground/calibration/: capture_calibration_data.py
src/lerobot_playground/control/: flow_solver.py  flow_solver_so101.py  recorded_flow.npy  recorded_flow_robot.npz  recorded_joints.npz  teleop.py
src/lerobot_playground/point_clouds/: camera_stream.py  point_cloud_viewer.py  robot_state.py  system_vis.py  tuner.py
tests/: conftest.py
tests/hardware_stack/: test_icp.py  test_icp_new.py  test_robot_state.py  test_system_vis.py  test_viser_viewer.py
tests/pure/: test_paths.py  test_teleop_config.py
