[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot-3d"
version = "0.1.0"
description = "SO101 teleoperation with live multi-camera point-cloud fusion and a viser-based 3D viewer, built on LeRobot."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sergio Orozco", email = "sergio_orozco@brown.edu" }]
keywords = ["robotics", "lerobot", "so101", "teleoperation", "point-cloud", "computer-vision", "open3d", "viser"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Robotics",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "numpy>=1.22",
    "opencv-python-headless>=4.8",
    "open3d>=0.17",
    "imageio>=2.31",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "PyYAML>=6.0",
    "Pillow>=10.0",
    "lerobot==0.4.2",
    "urchin",
    "viser",
    "feetech-servo-sdk"
]

[project.optional-dependencies]
realsense = ["pyrealsense2"]

[project.urls]
Homepage = "https://github.com/SergioMOrozco/lerobot_3d"
Repository = "https://github.com/SergioMOrozco/lerobot_3d"
Issues = "https://github.com/SergioMOrozco/lerobot_3d/issues"

[project.scripts]
lerobot-teleop = "lerobot_3d.control.teleop:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lerobot_3d = ["calibration/**/*"]
